force-app/main/default/objects/Participante__c/Participante__c.object-meta.xml
<CustomObject>
    <label>Participante</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número do Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>