force-app/main/default/objects/Participante__c/fields/Conta_3__c.field-meta.xml
<CustomField>
    <fullName>Conta_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participantes (Conta 3)</relationshipLabel>
    <relationshipName>Participantes2</relationshipName>
    <type>Lookup</type>
</CustomField>