force-app/main/default/objects/Participante__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <label>E-mail</label>
    <length>150</length>
    <type>Text</type>
</CustomField>