force-app/main/default/objects/Participante__c/fields/Ordem_de_trabalho_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_trabalho_Relacionada__c</fullName>
    <label>Ordem de trabalho Relacionada</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Participantes</relationshipLabel>
    <relationshipName>Participantes1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>