force-app/main/default/objects/Participante__c/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <defaultValue>&quot;(DDD)+(Número)&quot;</defaultValue>
    <label>Telefone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>